--- a/package.json
+++ b/package.json
@@ -2,21 +2,28 @@
   "name": "movies",
   "version": "0.1.0",
   "private": true,
+  "packageManager": "pnpm@8.2.0",
   "author": {
     "name": "Oktora Kevin Arigi",
     "email": "oktora.kevin.arigi@gmail.com"
   },
   "engines": {
     "node": "^18.14.0",
-    "npm": "please-use-pnpm"
+    "npm": "please-use-pnpm",
+    "pnpm": ">=8"
   },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint --fix",
+    "prettier": "prettier --write --ignore-unknown src",
+    "prettier:check": "prettier --check --ignore-unknown src",
     "prepare": "husky install",
     "lint:staged": "lint-staged"
+  },
+  "git": {
+    "pre-commit": "lint:staged"
   },
   "dependencies": {
     "@tanstack/react-query": "^4.32.6",
@@ -51,6 +58,7 @@
     "eslint-plugin-sonarjs": "^0.20.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.3",
-    "prettier": "^3.0.1"
+    "prettier": "^3.0.1",
+    "prettier-plugin-tailwindcss": "^0.4.1"
   }
 }
