--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "embla-carousel-react": "8.0.0-rc11",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
+    "framer-motion": "^10.15.1",
     "next": "13.4.13",
     "postcss": "8.4.27",
     "react": "18.2.0",
