--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lint:staged": "lint-staged"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.16",
     "@tanstack/react-query": "^4.32.6",
     "@tanstack/react-query-devtools": "^4.32.6",
     "@types/node": "20.4.8",
@@ -38,9 +39,11 @@
     "framer-motion": "^10.15.1",
     "next": "13.4.13",
     "postcss": "8.4.27",
+    "rc-dialog": "^9.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-highlight-words": "^0.20.0",
+    "react-lite-youtube-embed": "^2.3.52",
     "sweetalert2": "^11.7.20",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
