--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "prepare": "husky install",
     "lint:staged": "lint-staged",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "test-storybook": "test-storybook"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.16",
@@ -59,13 +60,16 @@
     "@storybook/addon-links": "^7.2.2",
     "@storybook/addon-onboarding": "^1.0.8",
     "@storybook/blocks": "^7.2.2",
+    "@storybook/jest": "^0.1.0",
     "@storybook/manager-api": "^7.2.2",
     "@storybook/nextjs": "^7.2.2",
     "@storybook/react": "^7.2.2",
+    "@storybook/test-runner": "^0.13.0",
     "@storybook/testing-library": "^0.2.0",
     "@storybook/theming": "^7.2.2",
     "@tanstack/eslint-plugin-query": "^4.32.5",
     "@types/react-highlight-words": "^0.16.4",
+    "@types/testing-library__jest-dom": "^5.14.9",
     "@typescript-eslint/eslint-plugin": "^6.2.1",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
