--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "lint:staged": "lint-staged",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "test-storybook": "test-storybook"
+    "test": "jest",
+    "test:generate-output": "jest --json --outputFile=.jest-test-results.json --watch"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.16",
@@ -57,6 +58,7 @@
     "@faker-js/faker": "^8.0.2",
     "@storybook/addon-essentials": "^7.2.2",
     "@storybook/addon-interactions": "^7.2.2",
+    "@storybook/addon-jest": "^7.2.2",
     "@storybook/addon-links": "^7.2.2",
     "@storybook/addon-onboarding": "^1.0.8",
     "@storybook/blocks": "^7.2.2",
@@ -64,18 +66,23 @@
     "@storybook/manager-api": "^7.2.2",
     "@storybook/nextjs": "^7.2.2",
     "@storybook/react": "^7.2.2",
-    "@storybook/test-runner": "^0.13.0",
     "@storybook/testing-library": "^0.2.0",
     "@storybook/theming": "^7.2.2",
     "@tanstack/eslint-plugin-query": "^4.32.5",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^14.0.0",
     "@types/react-highlight-words": "^0.16.4",
     "@types/testing-library__jest-dom": "^5.14.9",
     "@typescript-eslint/eslint-plugin": "^6.2.1",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-jest-dom": "^5.0.2",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-sonarjs": "^0.20.0",
     "eslint-plugin-storybook": "^0.6.13",
+    "eslint-plugin-testing-library": "^5.11.1",
     "husky": "^8.0.3",
+    "jest": "^29.6.2",
+    "jest-environment-jsdom": "^29.6.2",
     "lint-staged": "^13.2.3",
     "msw": "^1.2.3",
     "msw-storybook-addon": "^1.8.0",
