--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@storybook/addon-interactions": "^7.2.2",
     "@storybook/addon-jest": "^7.2.2",
     "@storybook/addon-links": "^7.2.2",
+    "@storybook/addon-mdx-gfm": "^7.2.2",
     "@storybook/addon-onboarding": "^1.0.8",
     "@storybook/blocks": "^7.2.2",
     "@storybook/jest": "^0.1.0",
