--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "prettier:check": "prettier --check --ignore-unknown src",
     "prepare": "husky install",
     "lint:staged": "lint-staged",
-    "storybook": "storybook dev -p 6006",
+    "storybook": "pnpm test:generate-output && storybook dev -p 6006",
     "build-storybook": "storybook build",
     "test": "jest",
-    "test:generate-output": "jest --json --outputFile=.jest-test-results.json --watch"
+    "test:generate-output": "jest --json --outputFile=.jest-test-results.json"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.16",
