test github action

--- a/.github/workflows/cloud-run.yml
+++ b/.github/workflows/cloud-run.yml
@@ -7,9 +7,9 @@ on:
 
 env:
   PROJECT_ID: ${{ secrets.CLOUD_RUN_PROJECT_NAME }}
-  REGION: us-east1
+  REGION: us-central1
   # project-name but it can be anything you want
-  REPO_NAME: nextjs-cloud-run-app
+  REPO_NAME: movie
 
 jobs:
   build-and-deploy:
