--- a/package.json
+++ b/package.json
@@ -2,15 +2,12 @@
   "name": "movies",
   "version": "0.1.0",
   "private": true,
-  "packageManager": "pnpm@8.2.0",
   "author": {
     "name": "Oktora Kevin Arigi",
     "email": "oktora.kevin.arigi@gmail.com"
   },
   "engines": {
-    "node": "^18.14.0",
-    "npm": "please-use-pnpm",
-    "pnpm": ">=8"
+    "node": "^20.0.0"
   },
   "scripts": {
     "dev": "next dev",
@@ -19,79 +16,65 @@
     "lint": "next lint --fix",
     "prettier": "prettier --write --ignore-unknown src",
     "prettier:check": "prettier --check --ignore-unknown src",
+    "packages:update": "npx npm-check-updates --interactive --format group",
     "prepare": "husky install",
     "lint:staged": "lint-staged",
-    "storybook": "pnpm test:generate-output && storybook dev -p 6006",
-    "build-storybook": "storybook build",
-    "test": "jest",
-    "test:generate-output": "jest --json --outputFile=.jest-test-results.json"
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
-    "@tanstack/react-query": "^4.33.0",
-    "@tanstack/react-query-devtools": "^4.33.0",
-    "@types/node": "20.5.1",
-    "@types/react": "18.2.20",
-    "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.15",
+    "@tanstack/react-query": "^5.8.7",
+    "@tanstack/react-query-devtools": "^5.8.7",
+    "@tanstack/react-query-next-experimental": "^5.8.7",
     "clsx": "^2.0.0",
-    "dayjs": "^1.11.9",
-    "embla-carousel-autoplay": "8.0.0-rc11",
-    "embla-carousel-react": "8.0.0-rc11",
-    "eslint": "8.47.0",
-    "eslint-config-next": "13.4.19",
-    "framer-motion": "^10.16.0",
+    "dayjs": "^1.11.10",
+    "embla-carousel-autoplay": "^8.0.0-rc14",
+    "embla-carousel-react": "^8.0.0-rc14",
+    "framer-motion": "^10.16.5",
     "ismobilejs": "^1.1.1",
-    "next": "13.4.19",
-    "postcss": "8.4.28",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "14.0.3",
+    "react": "^18",
+    "react-dom": "^18",
     "react-highlight-words": "^0.20.0",
-    "react-lite-youtube-embed": "^2.3.52",
-    "sweetalert2": "^11.7.27",
-    "tailwind-merge": "^1.14.0",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.1.6",
-    "zod": "^3.22.2"
+    "react-lite-youtube-embed": "^2.4.0",
+    "sweetalert2": "^11.10.1",
+    "tailwind-merge": "^2.0.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@faker-js/faker": "^8.0.2",
-    "@storybook/addon-essentials": "^7.3.2",
-    "@storybook/addon-interactions": "^7.3.2",
-    "@storybook/addon-jest": "^7.3.2",
-    "@storybook/addon-links": "^7.3.2",
-    "@storybook/addon-mdx-gfm": "^7.3.2",
-    "@storybook/addon-onboarding": "^1.0.8",
-    "@storybook/blocks": "^7.3.2",
-    "@storybook/jest": "^0.2.1",
-    "@storybook/manager-api": "^7.3.2",
-    "@storybook/nextjs": "^7.3.2",
-    "@storybook/react": "^7.3.2",
-    "@storybook/testing-library": "^0.2.0",
-    "@storybook/theming": "^7.3.2",
-    "@tanstack/eslint-plugin-query": "^4.32.5",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.4.3",
-    "@types/react-highlight-words": "^0.16.4",
-    "@types/testing-library__jest-dom": "^5.14.9",
-    "@typescript-eslint/eslint-plugin": "^6.4.0",
+    "@faker-js/faker": "^8.3.1",
+    "@storybook/addon-essentials": "^7.5.3",
+    "@storybook/addon-interactions": "^7.5.3",
+    "@storybook/addon-links": "^7.5.3",
+    "@storybook/addon-mdx-gfm": "^7.5.3",
+    "@storybook/blocks": "^7.5.3",
+    "@storybook/nextjs": "^7.5.3",
+    "@storybook/react": "^7.5.3",
+    "@storybook/testing-library": "^0.2.2",
+    "@tanstack/eslint-plugin-query": "^5.8.4",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "@types/react-highlight-words": "^0.16.7",
+    "@typescript-eslint/eslint-plugin": "^6.12.0",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.3",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-jest-dom": "^5.0.2",
-    "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-sonarjs": "^0.20.0",
-    "eslint-plugin-storybook": "^0.6.13",
-    "eslint-plugin-testing-library": "^5.11.1",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-sonarjs": "^0.23.0",
+    "eslint-plugin-storybook": "^0.6.15",
     "husky": "^8.0.3",
-    "jest": "^29.6.2",
-    "jest-environment-jsdom": "^29.6.2",
-    "lint-staged": "^14.0.0",
-    "msw": "^1.2.3",
-    "msw-storybook-addon": "^1.8.0",
-    "prettier": "^3.0.1",
-    "prettier-plugin-tailwindcss": "^0.4.1",
-    "resize-observer-polyfill": "^1.5.1",
-    "storybook": "^7.3.2"
+    "lint-staged": "^15.1.0",
+    "msw": "^1.3.2",
+    "msw-storybook-addon": "^1.10.0",
+    "postcss": "^8",
+    "prettier": "^3.1.0",
+    "storybook": "^7.5.3",
+    "tailwindcss": "^3.3.5",
+    "typescript": "^5"
   },
   "msw": {
     "workerDirectory": "public"
