--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "email": "oktora.kevin.arigi@gmail.com"
   },
   "engines": {
-    "node": "^18.0.0"
+    "node": ">=18"
   },
   "scripts": {
     "dev": "next dev",
