--- a/package.json
+++ b/package.json
@@ -24,56 +24,56 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
-    "@tanstack/react-query": "^5.8.7",
-    "@tanstack/react-query-devtools": "^5.8.7",
-    "@tanstack/react-query-next-experimental": "^5.8.7",
+    "@tanstack/react-query": "^5.15.0",
+    "@tanstack/react-query-devtools": "^5.15.0",
+    "@tanstack/react-query-next-experimental": "^5.15.0",
     "clsx": "^2.0.0",
     "dayjs": "^1.11.10",
-    "embla-carousel-autoplay": "^8.0.0-rc14",
-    "embla-carousel-react": "^8.0.0-rc14",
-    "framer-motion": "^10.16.5",
+    "embla-carousel-autoplay": "^8.0.0-rc17",
+    "embla-carousel-react": "^8.0.0-rc17",
+    "framer-motion": "^10.16.16",
     "ismobilejs": "^1.1.1",
-    "next": "14.0.3",
+    "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
     "react-highlight-words": "^0.20.0",
     "react-lite-youtube-embed": "^2.4.0",
     "sweetalert2": "^11.10.1",
-    "tailwind-merge": "^2.0.0",
+    "tailwind-merge": "^2.2.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.3.1",
-    "@storybook/addon-essentials": "^7.5.3",
-    "@storybook/addon-interactions": "^7.5.3",
-    "@storybook/addon-links": "^7.5.3",
-    "@storybook/addon-mdx-gfm": "^7.5.3",
-    "@storybook/blocks": "^7.5.3",
-    "@storybook/nextjs": "^7.5.3",
-    "@storybook/react": "^7.5.3",
-    "@storybook/testing-library": "^0.2.2",
-    "@tanstack/eslint-plugin-query": "^5.8.4",
+    "@storybook/addon-essentials": "^7.6.6",
+    "@storybook/addon-interactions": "^7.6.6",
+    "@storybook/addon-links": "^7.6.6",
+    "@storybook/addon-mdx-gfm": "^7.6.6",
+    "@storybook/blocks": "^7.6.6",
+    "@storybook/nextjs": "^7.6.6",
+    "@storybook/react": "^7.6.6",
+    "@storybook/test": "^7.6.6",
+    "@tanstack/eslint-plugin-query": "^5.14.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-highlight-words": "^0.16.7",
-    "@typescript-eslint/eslint-plugin": "^6.12.0",
+    "@typescript-eslint/eslint-plugin": "^6.16.0",
     "autoprefixer": "^10.4.16",
     "eslint": "^8",
-    "eslint-config-next": "14.0.3",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-import": "^2.29.0",
-    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-config-next": "14.0.4",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.2",
     "eslint-plugin-sonarjs": "^0.23.0",
     "eslint-plugin-storybook": "^0.6.15",
     "husky": "^8.0.3",
-    "lint-staged": "^15.1.0",
+    "lint-staged": "^15.2.0",
     "msw": "^1.3.2",
     "msw-storybook-addon": "^1.10.0",
     "postcss": "^8",
-    "prettier": "^3.1.0",
-    "storybook": "^7.5.3",
-    "tailwindcss": "^3.3.5",
+    "prettier": "^3.1.1",
+    "storybook": "^7.6.6",
+    "tailwindcss": "^3.4.0",
     "typescript": "^5"
   },
   "msw": {
